--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,9 @@ handlers:
 - url: /announce
   script: main.py
 
+- url: /ntrack # Backwards compat XXX Remove me eventually
+  script: main.py
+
 - url: /static/
   static_dir: static
 
