--- a/app.yaml
+++ b/app.yaml
@@ -31,6 +31,13 @@ handlers:
 - url: /debug
   script: debug.py
 
+- url: /scrape
+  static_files: static/null.html
+  upload:static/null.html
+
+- url: /google1c5d509bd1822f1d.html
+  static_files: static/null.html
+
 #- url: /.*
 #  script: 404.py
 
