Handle confused requests for /announceannounce, we should probably give a warning in such cases.

--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,11 @@ handlers:
   script: main.py
   secure: optional
 
+- url: /announceannounce # Broken requests?!?!?
+  script: main.py
+  secure: optional
+
+
 - url: /ntrack
   script: main.py
 
