--- a/app.yaml
+++ b/app.yaml
@@ -36,9 +36,13 @@ handlers:
 - url: /debug
   script: debug.py
 
-#- url: /scrape
-  #static_files: static/null.html
-  #upload: static/null.html
+- url: /mestat
+  script: mestat.py
+  login: admin
+
+- url: /scrape
+  static_files: static/null.html
+  upload: static/null.html
 
 - url: /google1c5d509bd1822f1d.html
   static_files: static/null.html
