--- a/app.yaml
+++ b/app.yaml
@@ -44,7 +44,5 @@ handlers:
   static_files: static/null.html
   upload: static/null.html
 
-#- url: /.*
-#  script: 404.py
-
-
+- url: /.*
+  script: redir.py
