--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,11 @@
 #application: atrack
-application: bittrk  
-version: 9
+application: dotehwerk
+version: 1
 runtime: python
 api_version: 1
+
+derived_file_type:
+- python_precompiled
 
 handlers:
 
@@ -30,8 +33,8 @@ handlers:
   upload: static/(.*)
 
 - url: /favicon.ico
-  static_files: static/imgs/favicon.ico
-  upload: static/imgs/favicon.ico
+  static_files: static/favicon.ico
+  upload: static/favicon.ico
 
 - url: /app-admin/
   script: $PYTHON_LIB/google/appengine/ext/admin
