--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ python:
     - "3.3"
     - "3.4"
 install:
-    - "pip install ."
-script: nosetests
+    - pip install .
+    - pip install coveralls
+script: nosetests --with-coverage --cover-package=greyskull
+after_success: coveralls
